--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
 services:
-  mysql:
-    image: mysql:latest
-    container_name: mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: "qweasdzxcee"
-      MYSQL_DATABASE: "appdb"
-      MYSQL_USER: "admin"
-      MYSQL_PASSWORD: "qweasdzxcee"
-    volumes:
-      - ./mysql:/var/lib/mysql
-    networks:
-      - test-network
-    ports:
-      - '3306:3306'
-    restart: on-failure
- 
-  phpmyadmin:
+   mysql:
+      image: mysql:latest
+      container_name: mysql
+      environment:
+         MYSQL_ROOT_PASSWORD: "qweasdzxcee"
+         MYSQL_DATABASE: "appdb"
+         MYSQL_USER: "admin"
+         MYSQL_PASSWORD: "qweasdzxcee"
+      volumes:
+         - ./mysql:/var/lib/mysql
+      networks:
+         - test-network
+      ports:
+         - "3306:3306"
+      restart: on-failure
+
+   phpmyadmin:
       image: phpmyadmin:latest
       container_name: phpmyadmin
       environment:
@@ -25,11 +25,11 @@ services:
       networks:
          - test-network
       ports:
-         - '8080:80'
+         - "8080:80"
       depends_on:
          - mysql
-      
-  laravel:
+
+   laravel:
       container_name: laravel
       image: bitnami/laravel:latest
       environment:
@@ -42,11 +42,12 @@ services:
       volumes:
          - ./backend:/app
       ports:
-         - '8000:8000'
+         - "8000:8000"
       networks:
          - test-network
       depends_on:
          - mysql
+      command: sh -c "php artisan serve --host=0.0.0.0 --port=8000"
       restart: on-failure
 
 networks:
