--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ services:
       image: mysql:latest
       container_name: mysql
       environment:
-         MYSQL_ROOT_PASSWORD: "qweasdzxcee"
+         MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
          MYSQL_DATABASE: "appdb"
-         MYSQL_USER: "admin"
-         MYSQL_PASSWORD: "qweasdzxcee"
+         MYSQL_USER: ${DB_USER}
+         MYSQL_PASSWORD: ${DB_PASSWORD}
       volumes:
          - ./mysql:/var/lib/mysql
       networks:
@@ -21,7 +21,7 @@ services:
       environment:
          PMA_HOST: mysql
          PMA_PORT: 3306
-         MYSQL_ROOT_PASSWORD: "qweasdzxcee"
+         MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       networks:
          - test-network
       ports:
@@ -37,8 +37,8 @@ services:
          - DB_HOST=mysql
          - DB_PORT=3306
          - DB_DATABASE="appdb"
-         - DB_USERNAME="admin"
-         - DB_PASSWORD="qweasdzxcee"
+         - DB_USERNAME=${DB_USER}
+         - DB_PASSWORD=${DB_PASSWORD}
       volumes:
          - ./backend:/app
       ports:
