--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -15,6 +15,17 @@ services:
     networks:
       - nginx_net
 
+  certbot:
+    image: certbot/certbot
+    container_name: certbot
+    volumes:      
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    depends_on:
+      nginx
+    networks:
+      nginx_net
+
 networks:
   nginx_net:
     driver: bridge
