--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -6,9 +6,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/conf.d:/etc/nginx/conf.d         # конфиги виртуальных хостов
-      - ./nginx/html:/usr/share/nginx/html       # сайт (если статика)
-      - ./nginx/logs:/var/log/nginx              # логи
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./certbot/conf:/etc/letsencrypt          # config for certbot certificates
       - ./certbot/www:/var/www/certbot           # for certbot challenge
     restart: unless-stopped
