--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx.conf:/etc/nginx/nginx.conf
       - ./certbot/conf:/etc/letsencrypt          # config for certbot certificates
       - ./certbot/www:/var/www/certbot           # for certbot challenge
     restart: unless-stopped
