--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,13 +13,30 @@ http {
       server_name school2projects.xyz;
 
       # Redirect HTTP to HTTPS
-    #   location / {
-    #      return 301 https://$host$request_uri/;
-    #   }
+      location / {
+         return 301 https://$host$request_uri/;
+      }
 
       # Let's Encrypt challenge
       location /.well-known/acme-challenge/ {
          root /var/www/certbot;
+      }
+   }
+   
+   server {
+      listen 443 ssl;
+      server_name school2projects.xyz;
+
+      client_max_body_size 10M;
+      ssl_certificate /etc/letsencrypt/live/school2projects.xyz/fullchain.pem;
+      ssl_certificate_key /etc/letsencrypt/live/school2projects.xyz/privkey.pem;
+
+      location / {
+         proxy_pass http://laravelApp-school-tests:8002/;
+         proxy_set_header Host $host;
+         proxy_set_header X-Real-IP $remote_addr;
+         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+         proxy_set_header X-Forwarded-Proto $scheme;
       }
    }
 }
