--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,20 +23,25 @@ http {
       }
    }
    
-   server {
-      listen 443 ssl;
-      server_name school2projects.xyz;
+    server {
+        listen 443 ssl;
+        server_name school2projects.xyz;
 
-      client_max_body_size 10M;
-      ssl_certificate /etc/letsencrypt/live/school2projects.xyz/fullchain.pem;
-      ssl_certificate_key /etc/letsencrypt/live/school2projects.xyz/privkey.pem;
+        client_max_body_size 10M;
+        ssl_certificate /etc/letsencrypt/live/school2projects.xyz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/school2projects.xyz/privkey.pem;
 
-      location / {
-         proxy_pass http://laravel:8000;
-         proxy_set_header Host $host;
-         proxy_set_header X-Real-IP $remote_addr;
-         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-         proxy_set_header X-Forwarded-Proto $scheme;
-      }
-   }
+        location / {
+            proxy_pass http://laravel:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+        
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|otf|map)$ {
+            proxy_pass http://laravel:8000;
+            proxy_set_header Host $host;
+        }
+    }
 }
